--- a/zyllibcs/zyllibcs_2010.csproj
+++ b/zyllibcs/zyllibcs_2010.csproj
@@ -20,7 +20,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin4_Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;DOTNET2;DOTNET3;DOTNET4;DT_PORTABLE</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;DOTNET2;DOTNET3;DOTNET4;DN_PORTABLE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\bin4_Debug\zyllibcs.XML</DocumentationFile>
@@ -29,7 +29,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin4\</OutputPath>
-    <DefineConstants>TRACE;DOTNET2;DOTNET3;DOTNET4;DT_PORTABLE</DefineConstants>
+    <DefineConstants>TRACE;DOTNET2;DOTNET3;DOTNET4;DN_PORTABLE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\bin4\zyllibcs.XML</DocumentationFile>
