重构了 StringEscapeC.cs .

--- a/zyllibcs/zyllibcs.csproj
+++ b/zyllibcs/zyllibcs.csproj
@@ -43,6 +43,9 @@
     <Compile Include="system\IndentedWriterObjectFunctor.cs" />
     <Compile Include="system\IndentedWriterUtil.cs" />
     <Compile Include="system\TextIndentedWriter.cs" />
+    <Compile Include="text\StringEscapeC.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
