--- a/zyllibcs/zyllibcs4.csproj
+++ b/zyllibcs/zyllibcs4.csproj
@@ -44,6 +44,7 @@
     <Compile Include="system\IndentedWriterObjectFunctor.cs" />
     <Compile Include="system\IndentedWriterUtil.cs" />
     <Compile Include="system\TextIndentedWriter.cs" />
+    <Compile Include="text\StringEscapeC.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
