--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ bin2/
 bin2_Debug/
 bin4/
 bin4_Debug/
+binp4/
+binp4_Debug/
 
 # mstest test results
 TestResults
@@ -110,3 +112,6 @@ Generated_Code #added for RIA/Silverlight projects
 _UpgradeReport_Files/
 Backup*/
 UpgradeLog*.XML
+
+*.pidb
+*.userprefs
