--- a/zinfotools/system/zinfoenvironment/zinfoenvironment.csproj
+++ b/zinfotools/system/zinfoenvironment/zinfoenvironment.csproj
@@ -35,6 +35,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MyInfo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
