--- a/zyllibcs/zyllibcs.csproj
+++ b/zyllibcs/zyllibcs.csproj
@@ -38,13 +38,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="system\TypeUtil.cs" />
     <Compile Include="text\BaseIndentedWriter.cs" />
     <Compile Include="text\IIndentedWriter.cs" />
     <Compile Include="text\IndentedWriterContext.cs" />
     <Compile Include="text\IndentedWriterMemberEventArgs.cs" />
     <Compile Include="text\IndentedWriterObjectFunctor.cs" />
     <Compile Include="text\IndentedWriterUtil.cs" />
-    <Compile Include="text\MemberInfoFormat.cs" />
     <Compile Include="text\TextIndentedWriter.cs" />
     <Compile Include="text\StringEscapeC.cs" />
   </ItemGroup>
