--- a/zinfotools/zinfodata.csproj
+++ b/zinfotools/zinfodata.csproj
@@ -32,12 +32,14 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="InfoData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="system\zinfoculture\MyInfo.cs" />
+    <Compile Include="system\zinfodraw\MyInfo.cs" />
     <Compile Include="system\zinfoenvironment\MyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
