--- a/zinfotools/system/zinfobase/zinfobase.csproj
+++ b/zinfotools/system/zinfobase/zinfobase.csproj
@@ -4,49 +4,41 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.50727</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{8D4B6392-21A6-4E3F-B943-5DE367BD002C}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{979D7517-4FE1-40B3-BF3E-FF3866525B30}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>zinfodata</RootNamespace>
-    <AssemblyName>zinfodata</AssemblyName>
+    <RootNamespace>zinfobase</RootNamespace>
+    <AssemblyName>zinfobase</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>zinfotoolsf\zinfodata\bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;UNSAFE;DOTNET2</DefineConstants>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>TRACE;DEBUG;DOTNET2</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>zinfotoolsf\zinfodata\bin\Release\</OutputPath>
-    <DefineConstants>TRACE;UNSAFE;DOTNET2</DefineConstants>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE;DOTNET2</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InfoData.cs" />
+    <Compile Include="MyInfo.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="system\zinfobase\MyInfo.cs" />
-    <Compile Include="system\zinfoculture\MyInfo.cs" />
-    <Compile Include="system\zinfodraw\MyInfo.cs" />
-    <Compile Include="system\zinfoenvironment\MyInfo.cs" />
-    <Compile Include="winform\zinfowinform\MyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\zyllibcs\zyllibcs.csproj">
+    <ProjectReference Include="..\..\..\zyllibcs\zyllibcs.csproj">
       <Project>{B1E5DB93-5A0E-4D61-A69B-42786A0D259A}</Project>
       <Name>zyllibcs</Name>
     </ProjectReference>
