--- a/zyllibcs/zyllibcs.csproj
+++ b/zyllibcs/zyllibcs.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="system\GacUtil.cs" />
     <Compile Include="system\TypeUtil.cs" />
     <Compile Include="text\BaseIndentedWriter.cs" />
     <Compile Include="text\IIndentedWriter.cs" />
