--- a/zyllibcs/zyllibcs4.csproj
+++ b/zyllibcs/zyllibcs4.csproj
@@ -37,7 +37,7 @@
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
     <OutputPath>..\bin4_Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;UNSAFE;DOTNET2;DOTNET3;DOTNET4</DefineConstants>
+    <DefineConstants>TRACE;DEBUG;UNSAFE;DOTNET2;DOTNET3;DOTNET3A;DOTNET4</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\bin4_Debug\zyllibcs.XML</DocumentationFile>
@@ -48,7 +48,7 @@
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>..\bin4\</OutputPath>
-    <DefineConstants>TRACE;UNSAFE;DOTNET2;DOTNET3;DOTNET4</DefineConstants>
+    <DefineConstants>TRACE;UNSAFE;DOTNET2;DOTNET3;DOTNET3A;DOTNET4</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>..\bin4\zyllibcs.XML</DocumentationFile>
@@ -58,10 +58,13 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="system\GacUtil.cs" />
+    <Compile Include="system\TypeNameComparer.cs" />
     <Compile Include="system\TypeUtil.cs" />
     <Compile Include="text\BaseIndentedWriter.cs" />
     <Compile Include="text\IIndentedWriter.cs" />
