--- a/zyllibcs/zyllibcsp4.csproj
+++ b/zyllibcs/zyllibcsp4.csproj
@@ -36,6 +36,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="system\GacUtil.cs" />
+    <Compile Include="system\TypeNameComparer.cs" />
     <Compile Include="system\TypeUtil.cs" />
     <Compile Include="text\BaseIndentedWriter.cs" />
     <Compile Include="text\IIndentedWriter.cs" />
